--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="app">
+      <div class="vid-container"><video src=""></video></div>
+      <div class="player-container">
+        <button class="sound-picker"></button
+        ><button class="sound-picker"></button>
+      </div>
+      <div class="time-select">
+        <button id="smaller-mins"></button><button id="medium-mins"></button
+        ><button id="long-mins"></button>
+      </div>
+      <div class="time-display"></div>
+      <button class="play"></button>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
