--- a/main.html
+++ b/main.html
@@ -11,14 +11,14 @@
 	<div class="app">
       <div class="vid-container"><video src=""></video></div>
       <div class="player-container">
-        <button class="sound-picker"></button
-        ><button class="sound-picker"></button>
+        <button class="sound-picker"><audio></audio></button
+        ><button class="sound-picker"><audio></audio></button>
       </div>
       <div class="time-select">
         <button id="smaller-mins"></button><button id="medium-mins"></button
         ><button id="long-mins"></button>
       </div>
-      <div class="time-display"></div>
+      <div class="time-display">10.0</div>
       <button class="play"></button>
     </div>
     <script type="text/javascript" src="./script.js">
